3 fix project width on smaller resolutions

--- a/style.css
+++ b/style.css
@@ -606,12 +606,12 @@ label {
 
 #posts-navigation a.nav-previous {
   right: 30px;
-  background-image: url("/admin/wp-content/themes/pop/public/media/arrow-navigation-right.png");
+  background-image: url("/wp-content/themes/pop/public/media/arrow-navigation-right.png");
 }
 
 #posts-navigation a.nav-next {
   left: 30px;
-  background-image: url("/admin/wp-content/themes/pop/public/media/arrow-navigation-left.png");
+  background-image: url("/wp-content/themes/pop/public/media/arrow-navigation-left.png");
 }
 
 @media (max-width: 1366px) {
